# robotic_tank_project

./: .gitignore  README.txt  blueprint_picow.py
docs/: architecure.md  setup_log.md
docs/hardware/: checklist.md
docs/hardware/build_reference/: system_design.fzz
docs/hardware/build_reference/devices/JGB37-520-12V-60RPM/: visualize.drawio
docs/hardware/devices/YD_Lidar_X3Pro/: driver.txt
firmware/pico_motor_control/src/: main.py
firmware/pico_w/: CMakeLists.txt
firmware/pico_w/micro_ros_ws/scripts/: main.py
firmware/pico_w/micro_ros_ws/src/: main.cpp  main.py
firmware/pico_w/micro_ros_ws/src/app/: CMakeLists.txt  main.cpp
firmware/pico_w/src/: main.py
software/ros2_ws/src/rc_car_teleop/: package.xml  setup.cfg  setup.py
software/ros2_ws/src/rc_car_teleop/docs/: ROS2.md  ROS_architecture.drawio
software/ros2_ws/src/rc_car_teleop/rc_car_teleop/: cmd_vel_publisher_node.py  electronics.py  teleop_node.py
software/ros2_ws/src/rc_car_teleop/rc_car_teleop/robot_core/: LIDAR.py  camera.py  lidar_processor.py  odom.py  sensors.py  yolo.py
software/ros2_ws/src/tank_bringup/config/: twist_mux.yaml  ydlidar.yaml
software/ros2_ws/src/tank_bringup/launch/: robot.launch.py
software/ros2_ws/src/tank_description/: CMakeLists.txt  package.xml
software/ros2_ws/src/tank_description/launch/: display.launch.py
software/ros2_ws/src/tank_description/meshes/: YDLIDAR_X3Pro.stl  full_chassis.stl
software/ros2_ws/src/tank_description/urdf/: tank.urdf
