<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tankdescription</name>
    <version>0.1.0</version>
    <description>URDF description package for autonomous tank robot</description>
    <maintainer email="jj@todo.todo">jj</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>